syntax = "proto3";

package tutorial; // namespace 에 해당

message Person {
    // bool, int32, float, double, string
    string name = 1;  // optional 은 말 그대로 set이 안될 수도 있는 경우에 사용. 
    int32 id = 2;
    string email = 3;

    enum PhoneType {
        PHONE_TYPE_UNSPECIFIED = 0;
        PHONE_TYPE_MOBILE = 1;
        PHONE_TYPE_HOME = 2;
        PHONE_TYPE_WORK = 3;
    }

    message PhoneNumber {
        optional string number =1;
        optional PhoneType type = 2;
    }

    repeated PhoneNumber phones = 4; // repeated 는 dynamically sized arrays 를 생각하면 된다.
}

message AddressBook {
    repeated Person people = 1;
}